src/nimfomane/component/TopicImage/EscortImages/EscortImages.module.scss
.container {
  margin: 20px;
  padding-bottom: 300px;

  :global(.onMobile) & {
    display: flex;
    flex-direction: column;
    height: 100vh;
    margin: 0;
    padding-bottom: 0;
  }
}

.content {
  :global(.onMobile) & {
    flex: 1 1 auto;
    padding: 20px;
  }
}

.spacer {
  padding-bottom: 300px;
}

.header {
  position: sticky;
  top: 20px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-bottom: 20px;
  z-index: 10;

  :global(.onMobile) & {
    position: sticky;
    bottom: 0;
    flex-shrink: 0;
    padding: 20px;
    margin-bottom: 0;
  }
}

.filler {
  position: absolute;
  z-index: -1;
  height: 100vh;
  top: 0;
}


.image_container {
  position: relative;
  background: rgba(20,20,20,0.95);
  border-radius: 15px;
  overflow: hidden;
  margin-bottom: 20px;
  min-height: 45vh;
  display: flex;
  align-items: center;

  .image_inner_container {
    position: relative;
    width: 100%;
  }

  img {
    max-width: 100%;
    max-height: 80vh;
    margin: auto;
    display: block;
  }
}

.image_date {
  padding: 2px 5px;
  color: #b9b9b9;
  background: rgba(34, 34, 34, 0.6);
  backdrop-filter: blur(2px);
  border-radius: 5px;
  position: absolute;
  bottom: 2px;
  left: 50%;
  transform: translate(-50%, 0);
  display: inline-block;
  text-align: center;

  :global(.isFirefox) & {
    backdrop-filter: none;
    background: rgba(34, 34, 34, 0.85);
  }
}

.logo {
  width: 60px;
  height: 60px;
  cursor: pointer;

  :global(.onMobile) & {
    width: 42px;
    height: 42px;
  }
}

.closeButton {
  border: none;
  border-radius: 1000px;
  padding: 11px;
  line-height: 0 !important;
  background: rgba(20,20,20,0.85);
  cursor: pointer;

  svg {
    stroke: #ffffff;
    width: 38px;
    height: 38px;

    :global(.onMobile) & {
      width: 20px;
      height: 20px;
    }
  }
}

.loading {
  margin: 30px 0;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.noImages {
  text-align: center;
  color: white;
  font-size: 20px;
}

.errorWrapper {
  background: rgba(20,20,20,0.95);
  border-radius: 15px;
  padding-left: 12px;
  padding-right: 12px;
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
  max-width: 100%;
  overflow: hidden;
}

